add projects list
